test: replace deprecated API in the Quarkus test sources
- ElementQuery.first() and attribute("id", ...) become single() and
  withId(...). single() also asserts there is exactly one match, which
  surfaced one query that only passed by taking the first of two: the
  smoke test's span lookup, now scoped to the view it checks.
- new URL(String) becomes URI.create(...).toURL() and new Locale(String,
  String) becomes Locale.of(...).

The one deprecation left is @Theme on AppShellConfig, kept on purpose:
the reusable-theme fixture exists to check that a theme packaged in a jar
is picked up through it.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>